m6.1.0
Backport up to 6.2.2 from future.
Add ec_flux check command to check current chunk's source flux ratio